tests/outputs/counterexample_compile.exp
generated/Main.java:18: error: cannot find symbol
        foo(x);
        ^
  symbol:   method foo(A)
  location: class Main
generated/Main.java:19: error: cannot find symbol
        foo(y);
        ^
  symbol:   method foo(B)
  location: class Main
2 errors
